--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #21273c;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,11 +15,13 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #a6a6a6;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #ffffff;
+  text-shadow: #ffffff 0px 0px 2px;
+  box-shadow: #ffffff;
 }
 
 body {
@@ -65,4 +67,10 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+.hero-text {
+  text-shadow: #f0f0f0 1px 0px 12px;
+  cursor: default;
+  margin-bottom: 2rem;
+  font-size: 3rem;
 }
